<resources>
    <string name="app_name">GleanTN</string>

    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_password">Password</string>
    <string name="signin_button_text">SingUp</string>
    <string name="login_button_text">Login</string>
    <string name="signout_button_text">SignOut</string>

    <string name="no_account_error">create a new account</string>
    <string name="minimum_password">Enter at least 6 characters!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="welcome_message">Hello, Your are sign in!</string>


    <string name="choose_patient">Please choose a patient</string>
    <string name="society_of_st_andrew">Society of St.Andrew</string>
    <string name="create_a_new_user">Create a new user</string>
    <string name="New_User_TextView">New User</string>
    <string name="Full_Name_EditText">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="street_text">street</string>
    <string name="City_Text">City</string>
    <string name="State_Text">State</string>
    <string name="Zipcode_Text">Zipcode</string>
    <string name="create_a_great_person">Create a great person</string>
    <string name="Create_Text">Create</string>
    <string name="hello_TextView">Hello</string>
    <string name="describe_your_product_please">Describe your product please:</string>
    <string name="send_email">send Email</string>
    <string name="sign_out">Sign out</string>

</resources>
