<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.org.endhunger.gleantn.NewUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30sp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/New_User_TextView"
            android:textAllCaps="true"
            android:textSize="36sp" />


        <EditText
            android:id="@+id/New_User_FullName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/Full_Name_EditText"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_Email_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_Password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_Phone_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_Street_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/street_text"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_City_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/City_Text"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_State_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/State_Text"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/New_User_ZipCode_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/Zipcode_Text"
            android:inputType="number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/Summit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:onClick="SummitNewUserAccount"
            android:background="@color/colorPrimary"
            android:text="@string/Create_Text"/>

    </LinearLayout>


</ScrollView>
