<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textColor="@android:color/holo_blue_light"
    tools:context="com.org.endhunger.gleantn.LogingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/society_of_st_andrew"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/holo_red_light"/>

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:id="@+id/edit_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edit_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/hint_enter_password"
            android:imeOptions="actionDone"
            android:textAlignment="center"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:background="@color/colorPrimary"
            android:onClick="Login"
            android:text="@string/login_button_text"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/create_new_user_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_user"
            android:onClick="CreateNewUser"
            android:layout_margin="15dp"
            android:textAlignment="textEnd"
            android:textSize="20sp"/>
    </LinearLayout>

</ScrollView>
